# mcp-snowflake-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  context7.json  example_connections.toml  package.json  prek.toml  pyproject.toml  release-please-config.json  runtime_config.json  server.json
.agents/skills/snowflake-integration-testing/: SKILL.md
.agents/skills/snowflake-integration-testing/references/: test-procedures.md
.agents/skills/snowflake-integration-testing/scripts/: sample-queries.sql
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-check.yml  lint.yml  lint_pr.yml  publish.yml  release-please.yml  scorecard.yml  test.yml
src/mcp_snowflake_server/: __init__.py  db_client.py  serialization.py  server.py  write_detector.py
tests/: conftest.py  test_db_client.py  test_init.py  test_serialization.py  test_server.py  test_write_detector.py
