[project]
name = "mcp_snowflake_server"
version = "0.4.0"
description = "A simple Snowflake MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "snowflake-connector-python[pandas]==4.4.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "sqlparse>=0.5.3",
    "snowflake-snowpark-python==1.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy==1.20.2", "ruff==0.15.11"]

[project.scripts]
mcp_snowflake_server = "mcp_snowflake_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_snowflake_server"]

[tool.ruff]
line-length = 100
target-version = "py313"
fix = true

lint.select = [
    # pycodestyle E
    "E4", "E7", "E9", 
    # Pyflakes
    "F", 
    # pycodestyle W
    "W",
    # isort 
    "I",
    # mccabe
    "C90",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # pylint
    "PL",
    # flake8-bugbear
    "B006",
]

lint.ignore = [
    ### TODO: Enable gradually
    # Temp
    "PLR0913",
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
docstring-code-format = true